--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,4 @@ jobs:
     - uses: actions/checkout@v1
     - uses: ./action-a
       env:
-        MY_NAME: "Mona's Beasty Friend"
+        MY_NAME: "Mona"
